# rz-gadget

./: .gitignore  .gitmodules  Cargo.toml  compile_commands.json  meson.build
librz_il-sys/: Cargo.toml  bindings.rs  build.rs
librz_il-sys/src/: bindings.rs  debug.rs  lib.rs  wrapper.h
rise/: Cargo.toml  README.md
rise/src/: .solver.rs.rustfmt  context.rs  convert.rs  effect.rs  engine.rs  error.rs  explorer.rs  interval.rs  intervalmap.rs  main.rs  map.rs  memory.rs  paged_map.rs  registers.rs  rise.rs  rzil.rs  solver.rs  state.rs  to_z3.rs  utils.rs  variables.rs
rise/src/context/: memory.rs  process.rs  solver.rs
rise/src/explorer/: blockwise.rs  explorer.rs
rise/src/map/: interval.rs  interval_map.rs  paged_map.rs  splay_tree.rs
rise/src/memory/: seg_mem.rs
rise/src/rzil/: ast.rs  builder.rs  error.rs  lifter.rs  variables.rs
rise/src/state/: memory.rs  process.rs  solver.rs
rise/test/: and_rsp_-0x10.json  and_rsp_-0xf.json  je_0x1107.json  push_qword_rip+0x2fa2.json  ret.json  shr_rsi_0x3f.json  sub_al_0x20.json  sub_rsp_0x8.json  test.json  xor_eax_eax.json
risee/: Cargo.toml
risee/src/: context.rs  main.rs  memory.rs  rzil.rs  solver.rs  utils.rs
risee/src/context/: context.rs
risee/src/explorer/: interactive.rs
risee/src/regstore/: regstore.rs
risee/src/rzil/: to_z3.rs
risee/src/utils/: state.rs
rz-sym/: Cargo.toml
rz-sym/src/: main.rs  memory.rs  rzil.rs  state.rs
rz-sym/src/engine/: rune.rs
rz-sym/src/explorer/: bfs.rs  dfs.rs  directed.rs
rz-sym/src/memory/: qword_mem.rs
rz-sym/src/regstore/: regfile.rs
rz-sym/src/rzil/: to_smt.rs  to_z3.rs
rz-sym/src/smt/: theories.rs
rz-sym/src/stream/: mod.rs
rz-sym/src/utils/: utils.rs
rzapi/: Cargo.toml  README.md  api_exapmle.yaml
rzapi/examples/: analysis_example.rs  api_example.rs
rzapi/src/: api.rs  api_trait.rs  lib.rs  structs.rs
rzil-rs/: .op.rs  Cargo.toml
rzil-rs/src/: 1  c_wrapper.rs  lib.rs  op.rs  test_bindings.rs
rzil2smt/: Cargo.toml
smt-libv2/: il_symbolic_vm.c  il_to_z3.c  meson.build  rz-smt.c  smt-libv2_format.md  z3_test.c
smt-libv2/include/: rz-gadget.h
smt-libv2/test/: il_test.c  meson.build  z3_test.c
subprojects/: z3.wrap.notyet
