[package]
name = "rise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.1"
petgraph = "0.2.10"
z3 = "0.12.1"
rustproof-libsmt = "0.1.0"
rzapi = { path = "../rzapi" }
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
thiserror = "1.0.40"
quick_cache = "0.4.0"
rangemap = "1.4.0"
