[package]
name = "rz-sym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.1"
rzapi = { path = "../rzapi" }
smtlib = { version = "0.1.6", features = ["z3"] }
thiserror = "1.0.40"

