[package]
name = "rzapi"
version = "0.1.0"
edition = "2021"
authors = [ "pancake <pancake@nopcode.org>",
"sushant94 <sushant.dinesh94@gmail.com>",
"chinmaydd <chinmay1dd@gmail.com>",
"kui8shi <gbiifvrc517@gmail.com>",]

description = "rz-pipe.rs api abstraction layer"

# Repository
#repository = "https://github.com/kui8shi/rz-gadget"

# License information
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
libc = "*"
clippy = { version = "*", optional = true }
serde = "*"
serde_json = "*"
serde_derive = "*"
thiserror = "1.0.57"

[dependencies.rzpipe]
git = "https://github.com/rizinorg/rz-pipe"
